fixed overlapping sauces

--- a/themes/haymarket-jr/stylesheets/menu.css
+++ b/themes/haymarket-jr/stylesheets/menu.css
@@ -37,8 +37,8 @@ br {
 }
 
 .food_name_description {
-	width: 235px;
-	float: left;
+/*	width: 235px;
+*/	float: left;
 }
 
 .note,
